src/scss/app.scss
/* ... */
// Container: Wrapper for Toolbar and Content

.container {
  margin: 20px auto;
  width: 1010px;
}

.ui-container {
  border: 1px solid #CCC;
  border-radius: 3px;
  background: #FAFAFA;
  margin-bottom: $container-margin;
  padding: 5px 7px;

  h4, h4:hover {
    border-bottom: 1px solid #CCC;
  }
}

.highlight {
  border-color: #00b1d7 !important;
  border: 3px solid;
//  background: #E0F1F6 !important;
  transition: background-color 0.3s;
}


// Toolbar

#toolbar {
  width: $leftIconSize;
  float: left;
  margin-top: 20px;

  .icon {
    display: block;
    margin-bottom: 10px;
    width: 42px;
    height: 44px;
    vertical-align: middle;
    background-color: #BBBBBB;
    background-reapeat: no-repeat;
    background-position: center center;
    border: 1px solid #999;
    border-radius: 3px;
  }

  .icon:hover {
    background-color: #999;
    border: 1px solid #777;
  }

  .active {
    background-color: #333;
    border: 1px solid #000;
  }

  .toolbar-line {
    height: 2px;
    background: #CCC;
    border-top: 1px solid #CCC;
    border-bottom: 1px solid #FFF;
    margin: 10px 0px 10px 0px;
  }

  #trigger-type {
    background-image: url(../img/type.svg);
  }

  #trigger-data {
    background-image: url(../img/data.svg);
  }

  #trigger-color {
    background-image: url(../img/color.svg);
  }

  #trigger-icon {
    background-image: url(../img/icon.svg);
  }

  #trigger-text {
    background-image: url(../img/text.svg);
  }

  #trigger-adjustments {
    background-image: url(../img/adjustments.svg);
  }

  #trigger-scale {
    background-image: url(../img/scale.svg);
  }

}


// Display: Wrapper for the graphics and overlays

#display {
  width: 970px;
  height: 460px;
  margin-left: $leftIconSize;
  padding: 10px 10px 0 0;
  background: #FFF;
  background-image: url(../img/ruler.svg);
  background-repeat: no-repeat;
  position: relative;
  box-shadow: 0 0 2px 1px #AAA;

  #graph-container {
    overflow: hidden;
  }

  #graph {
    width: 100%;
    height: 100%;
  }

  .move-right {
    margin-left: $overlay-small-width;
  }

  .move-far-right {
    margin-left: $overlay-big-width;
  }

}
/* ... */

